add istanbul for code coverage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "cal.js",
   "scripts": {
-    "test": "mocha --harmony_destructuring tests"
+    "test": "mocha --harmony_destructuring --harmony_rest_parameters tests",
+    "cover": "node --harmony_destructuring --harmony_rest_parameters ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha tests"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/NSS-Cohort-11/node-cal#readme",
   "devDependencies": {
     "chai": "^3.4.1",
-    "mocha": "^2.3.4"
+    "istanbul": "^0.4.2",
+    "mocha": "^2.3.4",
+    "mocha-lcov-reporter": "^1.0.0"
   }
 }
