--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "cal.js",
   "scripts": {
     "test": "mocha --harmony_destructuring --harmony_rest_parameters tests",
-    "cover": "node --harmony_destructuring --harmony_rest_parameters ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha tests"
+    "cover": "node --harmony_destructuring --harmony_rest_parameters ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha tests",
+    "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/NSS-Cohort-11/node-cal#readme",
   "devDependencies": {
     "chai": "^3.4.1",
+    "coveralls": "^2.11.6",
     "istanbul": "^0.4.2",
     "mocha": "^2.3.4",
     "mocha-lcov-reporter": "^1.0.0"
